--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
 six==1.16.0
+tabulate==0.8.9
 treys==0.1.3
 urllib3==1.26.5
 zope.interface==5.4.0
