--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,19 @@ certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 configparser==5.0.2
+cycler==0.10.0
 idna==2.10
+kiwisolver==1.3.1
 lxml==4.6.3
+matplotlib==3.4.2
 numpy==1.20.3
 pandas==1.2.4
 parsedatetime==2.6
 pathlib==1.0.1
+Pillow==8.3.1
 poker==0.30.0
 pokereval==0.2.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
